--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=server
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+db.user=${DB_USER}
+db.pass=${DB_PASSWORD}
+db.host=${DB_HOST}
+db.port=${DB_PORT}
+db.name=${DB_NAME}
+
+server.port=${SERVER_PORT:8080}
