--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,6 +11,9 @@ ARG API_BASE
 ENV VITE_API_HOST=$API_HOST
 ENV VITE_API_PORT=$API_PORT
 ENV VITE_API_BASE=$API_BASE
+ENV VITE_API_PROTOCOL=$API_PROTOCOL
+
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 RUN npm run build
 
