--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
     networks:
       - sgu-net
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-proot"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   frontend:
     image: client:1.0-sgu
@@ -25,30 +30,41 @@ services:
     container_name: sgu-frontend
     ports:
       - "3000:80"
+      - ports:
+      - "3000:80"
+      - "3000:443"
     networks:
       - sgu-net
+    volumes:
+      - certbot-conf:/etc/letsencrypt:ro
     restart: unless-stopped
     depends_on:
       - database
 
-
   backend:
     image: server:1.0-sgu
-    build: ./server
+    build:
+      context: ./server
     container_name: sgu-backend
     environment:
       SERVER_PORT: 8080
       DB_HOST: database
       DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: root
       DB_NAME: db-users
+      DB_USER: root
+      DB_PASS: root
+      SERVER_SSL_ENABLE: true
+      SERVER_SSL_KEYSTORE: /etc/letsencrypt/lib/localhost/keystore.p12
+      SERVER_SSL_KEYSTORE_PASS: changeit
     ports:
       - "8081:8080"
-    depends_on:
-      - frontend
     networks:
       - sgu-net
+    volumes:
+      - certbot-conf:/etc/letsencrypt:ro
+    depends_on:
+      database:
+        condition: service_healthy
 
 volumes:
   sgu-volume:
