--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,7 @@ db.port=${DB_PORT}
 db.name=${DB_NAME}
 
 server.port=${SERVER_PORT:8080}
+server.ssl.enabled=${SERVER_SSL_ENABLE}
+server.ssl.key-store=${SERVER_SSL_KEYSTORE}
+server.ssl.key-store-password=${SERVER_SSL_KEYSTORE_PASS}
+server.ssl.key-store-type=PKCS12
