--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,33 +11,23 @@ services:
       - sgu-volume:/var/lib/mysql
     networks:
       - sgu-net
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-proot"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
 
   frontend:
     image: client:1.0-sgu
     build: 
       context: ./client
-      dockerfile: Dockerfile
       args:
         API_HOST: localhost
         API_PORT: 8081
         API_BASE: /api/users/
+        API_PROTOCOL: https
     container_name: sgu-frontend
     ports:
-      - "3000:80"
-      - ports:
-      - "3000:80"
       - "3000:443"
     networks:
       - sgu-net
     volumes:
       - certbot-conf:/etc/letsencrypt:ro
-    restart: unless-stopped
     depends_on:
       - database
 
@@ -54,20 +44,22 @@ services:
       DB_USER: root
       DB_PASS: root
       SERVER_SSL_ENABLE: true
-      SERVER_SSL_KEYSTORE: /etc/letsencrypt/lib/localhost/keystore.p12
+      SERVER_SSL_KEYSTORE: /etc/letsencrypt/live/localhost/keystore.p12
       SERVER_SSL_KEYSTORE_PASS: changeit
     ports:
       - "8081:8080"
     networks:
       - sgu-net
     volumes:
+      - sgu-volume:/var/lib/mysql
       - certbot-conf:/etc/letsencrypt:ro
     depends_on:
-      database:
-        condition: service_healthy
+      - frontend
 
 volumes:
   sgu-volume:
+    external: true
+  certbot-conf:
     external: true
 
 networks:
